Get rid of the 'chan' from softc structure and use the latter directly as sleep channel.

PR:		kern/174684
Submitted by:	jmg
MFC after:	2 weeks